@@ -1,5 +1,9 @@
 package org.broadinstitute.consent.http.service;
 
+import static org.broadinstitute.consent.http.enumeration.UserFields.ERA_EXPIRATION_DATE;
+import static org.broadinstitute.consent.http.enumeration.UserFields.ERA_STATUS;
+
+import com.google.common.annotations.VisibleForTesting;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -7,12 +11,11 @@ import com.google.gson.JsonObject;
 import com.google.inject.Inject;
 import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.NotFoundException;
+import java.time.Instant;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -29,6 +32,7 @@ import org.broadinstitute.consent.http.db.VoteDAO;
 import org.broadinstitute.consent.http.enumeration.UserFields;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 import org.broadinstitute.consent.http.exceptions.ConsentConflictException;
+import org.broadinstitute.consent.http.exceptions.LibraryCardRequiredException;
 import org.broadinstitute.consent.http.models.AuthUser;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.Institution;
@@ -46,6 +50,7 @@ import org.broadinstitute.consent.http.util.gson.GsonUtil;
 
 public class UserService implements ConsentLogger {
 
+  public static final String LIBRARY_CARD_FIELD = "libraryCard";
   public static final String LIBRARY_CARDS_FIELD = "libraryCards";
   public static final String USER_PROPERTIES_FIELD = "properties";
   public static final String USER_STATUS_INFO_FIELD = "userStatusInfo";
@@ -61,15 +66,15 @@ public class UserService implements ConsentLogger {
   private final SamDAO samDAO;
   private final UserServiceDAO userServiceDAO;
   private final DaaDAO daaDAO;
-  private final EmailService emailService;
   private final DraftServiceDAO draftServiceDAO;
+  private final InstitutionService institutionService;
 
   @Inject
   public UserService(UserDAO userDAO, UserPropertyDAO userPropertyDAO, UserRoleDAO userRoleDAO,
       VoteDAO voteDAO, InstitutionDAO institutionDAO, LibraryCardDAO libraryCardDAO,
       AcknowledgementDAO acknowledgementDAO, FileStorageObjectDAO fileStorageObjectDAO,
-      SamDAO samDAO, UserServiceDAO userServiceDAO, DaaDAO daaDAO, EmailService emailService,
-      DraftServiceDAO draftServiceDAO) {
+      SamDAO samDAO, UserServiceDAO userServiceDAO, DaaDAO daaDAO, DraftServiceDAO draftServiceDAO,
+      InstitutionService institutionService) {
     this.userDAO = userDAO;
     this.userPropertyDAO = userPropertyDAO;
     this.userRoleDAO = userRoleDAO;
@@ -81,8 +86,8 @@ public class UserService implements ConsentLogger {
     this.samDAO = samDAO;
     this.userServiceDAO = userServiceDAO;
     this.daaDAO = daaDAO;
-    this.emailService = emailService;
     this.draftServiceDAO = draftServiceDAO;
+    this.institutionService = institutionService;
   }
 
   /**
@@ -108,8 +113,6 @@ public class UserService implements ConsentLogger {
         userDAO.updateEraCommonsId(userId, userUpdateFields.getEraCommonsId());
       }
 
-      Optional<User> soBeforeUpdate = getSigningOfficialForUser(userId);
-
       // Update User Properties
       List<UserProperty> userProps = userUpdateFields.buildUserProperties(userId);
       if (!userProps.isEmpty()) {
@@ -117,26 +120,10 @@ public class UserService implements ConsentLogger {
         userPropertyDAO.insertAll(userProps);
       }
 
-      Optional<User> soAfterUpdate = getSigningOfficialForUser(userId);
-
-      // if SO went from not specified to specified (i.e. set for the first time)
-      // then send an email
-      if (soBeforeUpdate.isEmpty() && soAfterUpdate.isPresent()) {
-        try {
-          emailService.sendNewResearcherMessage(
-              userDAO.findUserById(userId),
-              soAfterUpdate.get()
-          );
-        } catch (Exception e) {
-          logWarn("Could not send new researcher notification to SO: %s".formatted(e.getMessage()));
-        }
-
-      }
-
       // Handle Roles
       if (Objects.nonNull(userUpdateFields.getUserRoleIds())) {
         List<Integer> currentRoleIds = userRoleDAO.findRolesByUserId(userId).stream()
-            .map(UserRole::getRoleId).collect(Collectors.toList());
+            .map(UserRole::getRoleId).toList();
         List<Integer> roleIdsToAdd = userUpdateFields.getRoleIdsToAdd(currentRoleIds);
         List<Integer> roleIdsToRemove = userUpdateFields.getRoleIdsToRemove(currentRoleIds);
         // Add the new role ids to the user
@@ -144,7 +131,7 @@ public class UserService implements ConsentLogger {
           List<UserRole> newRoles = roleIdsToAdd.stream()
               .map(id -> new UserRole(id,
                   Objects.requireNonNull(UserRoles.getUserRoleFromId(id)).getRoleName()))
-              .collect(Collectors.toList());
+              .toList();
           userRoleDAO.insertUserRoles(newRoles, userId);
         }
         // Remove the old role ids from the user
@@ -157,21 +144,29 @@ public class UserService implements ConsentLogger {
     return findUserById(userId);
   }
 
-  public void insertRoleAndInstitutionForUser(UserRole role, Integer institutionId,
-      Integer userId) {
+  public void insertRoleAndInstitutionForUser(UserRole role, User user) {
+    var userId = user.getUserId();
     try {
-      userServiceDAO.insertRoleAndInstitutionTxn(role, institutionId, userId);
+      if (user.getInstitutionId() == null) {
+        Institution institution = institutionService.findInstitutionForEmail(user.getEmail());
+        if (institution == null) {
+          throw new BadRequestException(
+              "No institution found for user: %s".formatted(user.getEmail()));
+        }
+        userServiceDAO.insertRoleAndInstitutionTxn(role, institution.getId(), userId);
+      } else {
+        userRoleDAO.insertSingleUserRole(role.getRoleId(), userId);
+      }
     } catch (Exception e) {
       logException(
-          "Error when updating user: %s, institution: %s, role: %s".formatted(userId.toString(),
-              institutionId.toString(), role.toString()), e);
+          "Error when updating user: %s, role: %s".formatted(userId, role), e);
       throw e;
     }
   }
 
   public User createUser(User user) {
     // Default role is researcher.
-    if (Objects.isNull(user.getRoles()) || CollectionUtils.isEmpty(user.getRoles())) {
+    if (CollectionUtils.isEmpty(user.getRoles())) {
       user.setResearcherRole();
     }
     validateRequiredFields(user);
@@ -179,9 +174,14 @@ public class UserService implements ConsentLogger {
     if (Objects.nonNull(existingUser)) {
       throw new BadRequestException("User exists with this email address: " + user.getEmail());
     }
-    Integer userId = userDAO.insertUser(user.getEmail(), user.getDisplayName(), new Date());
+    Institution institution = institutionService.findInstitutionForEmail(user.getEmail());
+    if (institution != null) {
+      user.setInstitutionId(institution.getId());
+    }
+    Integer userId = userDAO.insertUser(user.getEmail(), user.getDisplayName(),
+        user.getInstitutionId(), new Date());
     insertUserRoles(user.getRoles(), userId);
-    addExistingLibraryCards(user);
+    assignExistingLibraryCardToUser(user);
     return userDAO.findUserById(userId);
   }
 
@@ -190,10 +190,6 @@ public class UserService implements ConsentLogger {
     if (user == null) {
       throw new NotFoundException("Unable to find user with id: " + id);
     }
-    List<LibraryCard> cards = libraryCardDAO.findLibraryCardsByUserId(user.getUserId());
-    if (Objects.nonNull(cards) && !cards.isEmpty()) {
-      user.setLibraryCards(cards);
-    }
     return user;
   }
 
@@ -201,10 +197,6 @@ public class UserService implements ConsentLogger {
     User user = userDAO.findUserByEmail(email);
     if (user == null) {
       throw new NotFoundException("Unable to find user with email: " + email);
-    }
-    List<LibraryCard> cards = libraryCardDAO.findLibraryCardsByUserId(user.getUserId());
-    if (Objects.nonNull(cards) && !cards.isEmpty()) {
-      user.setLibraryCards(cards);
     }
     return user;
   }
@@ -247,7 +239,7 @@ public class UserService implements ConsentLogger {
       throw new NotFoundException();
     }
     List<User> users = userDAO.getUsersWithCardsByDaaId(daaId);
-    return users.stream().map(SimplifiedUser::new).collect(Collectors.toList());
+    return users.stream().map(SimplifiedUser::new).toList();
   }
 
   public void deleteUserByEmail(String email) {
@@ -260,13 +252,13 @@ public class UserService implements ConsentLogger {
         findRolesByUserId(userId).
         stream().
         map(UserRole::getRoleId).
-        collect(Collectors.toList());
+        toList();
     if (!roleIds.isEmpty()) {
       userRoleDAO.removeUserRoles(userId, roleIds);
     }
     List<Vote> votes = voteDAO.findVotesByUserId(userId);
     if (!votes.isEmpty()) {
-      List<Integer> voteIds = votes.stream().map(Vote::getVoteId).collect(Collectors.toList());
+      List<Integer> voteIds = votes.stream().map(Vote::getVoteId).toList();
       voteDAO.removeVotesByIds(voteIds);
     }
     try {
@@ -299,7 +291,7 @@ public class UserService implements ConsentLogger {
     }
 
     List<User> users = userDAO.getSOsByInstitution(institutionId);
-    return users.stream().map(SimplifiedUser::new).collect(Collectors.toList());
+    return users.stream().map(SimplifiedUser::new).toList();
   }
 
   public List<User> findUsersByInstitutionId(Integer institutionId) {
@@ -335,13 +327,15 @@ public class UserService implements ConsentLogger {
     Gson gson = GsonUtil.getInstance();
     User user = findUserById(userId);
     List<UserProperty> props = findAllUserProperties(user.getUserId());
-    List<LibraryCard> entries =
-        Objects.nonNull(user.getLibraryCards()) ? user.getLibraryCards() : List.of();
     JsonObject userJson = gson.toJsonTree(user).getAsJsonObject();
     JsonArray propsJson = gson.toJsonTree(props).getAsJsonArray();
-    JsonArray entriesJson = gson.toJsonTree(entries).getAsJsonArray();
     userJson.add(USER_PROPERTIES_FIELD, propsJson);
-    userJson.add(LIBRARY_CARDS_FIELD, entriesJson);
+    if (user.getLibraryCard() != null) {
+      JsonObject libraryCardJson = gson.toJsonTree(user.getLibraryCard()).getAsJsonObject();
+      userJson.add(LIBRARY_CARD_FIELD, libraryCardJson);
+      // Note that this is provided for backwards compatibility with the UI and will be removed
+      userJson.add(LIBRARY_CARDS_FIELD, gson.toJsonTree(List.of(libraryCardJson)));
+    }
     if (authUser.getEmail().equalsIgnoreCase(user.getEmail()) && Objects.nonNull(
         authUser.getUserStatusInfo())) {
       JsonObject userStatusInfoJson = gson.toJsonTree(authUser.getUserStatusInfo())
@@ -352,17 +346,15 @@ public class UserService implements ConsentLogger {
   }
 
   private void validateRequiredFields(User user) {
-    if (Objects.isNull(user.getDisplayName()) || StringUtils.isEmpty(user.getDisplayName())) {
+    if (StringUtils.isEmpty(user.getDisplayName())) {
       throw new BadRequestException("Display Name cannot be empty");
     }
-    if (Objects.isNull(user.getEmail()) || StringUtils.isEmpty(user.getEmail())) {
+    if (StringUtils.isEmpty(user.getEmail())) {
       throw new BadRequestException("Email address cannot be empty");
     }
+    List<String> validRoleNameList = Stream.of(UserRoles.RESEARCHER, UserRoles.ALUMNI,
+        UserRoles.ADMIN).map(UserRoles::getRoleName).toList();
     user.getRoles().forEach(role -> {
-      List<UserRoles> validRoles = Stream.of(UserRoles.RESEARCHER,
-          UserRoles.ALUMNI, UserRoles.ADMIN).collect(Collectors.toList());
-      List<String> validRoleNameList = validRoles.stream().map(UserRoles::getRoleName)
-          .collect(Collectors.toList());
       if (!validRoleNameList.contains(role.getName())) {
         String validRoleNames = String.join(", ", validRoleNameList);
         throw new BadRequestException(
@@ -380,56 +372,17 @@ public class UserService implements ConsentLogger {
     userRoleDAO.insertUserRoles(roles, userId);
   }
 
-  private Optional<User> getSigningOfficialForUser(Integer userId) {
-    List<UserProperty> props =
-        userPropertyDAO.findUserPropertiesByUserIdAndPropertyKeys(
-            userId,
-            List.of(UserFields.SELECTED_SIGNING_OFFICIAL_ID.getValue())
-        );
-
-    if (props.size() == 0) {
-      return Optional.empty();
+  private void assignExistingLibraryCardToUser(User user) {
+    LibraryCard libraryCard = libraryCardDAO.findLibraryCardByUserEmail(user.getEmail());
+    if (libraryCard != null) {
+      libraryCardDAO.updateLibraryCardById(
+          libraryCard.getId(),
+          user.getUserId(),
+          user.getDisplayName(),
+          user.getEmail(),
+          user.getUserId(),
+          new Date());
     }
-
-    UserProperty soIdProp = props.get(0);
-
-    int soId;
-    try {
-      soId = Integer.parseInt(soIdProp.getPropertyValue());
-    } catch (NumberFormatException e) {
-      return Optional.empty();
-    }
-
-    return Optional.ofNullable(userDAO.findUserById(soId));
-  }
-
-  private void addExistingLibraryCards(User user) {
-    List<LibraryCard> libraryCards = libraryCardDAO.findAllLibraryCardsByUserEmail(user.getEmail());
-
-    if (Objects.isNull(libraryCards) || libraryCards.isEmpty()) {
-      return;
-    }
-
-    libraryCards
-        .forEach(lc -> {
-          lc.setUserId(user.getUserId());
-
-          if (!Objects.isNull(lc.getInstitutionId())) {
-            user.setInstitutionId(lc.getInstitutionId());
-          }
-
-          libraryCardDAO.updateLibraryCardById(
-              lc.getId(),
-              lc.getUserId(),
-              lc.getInstitutionId(),
-              lc.getEraCommonsId(),
-              lc.getUserName(),
-              lc.getUserEmail(),
-              user.getUserId(),
-              new Date());
-        });
-
-    userDAO.updateUser(user.getDisplayName(), user.getUserId(), user.getInstitutionId());
   }
 
   public User findOrCreateUser(AuthUser authUser) throws Exception {
@@ -463,12 +416,143 @@ public class UserService implements ConsentLogger {
     return jsonElementList.stream().distinct().map(e -> findUserById(e.getAsInt())).toList();
   }
 
+  public void validateActiveERACredentials(User user) {
+    if (user.getLibraryCard() == null) {
+      throw new LibraryCardRequiredException();
+    }
+    boolean hasEraCommonsId = user.getEraCommonsId() != null;
+    if (!hasEraCommonsId) {
+      throw new BadRequestException("User does not have an Era Commons ID");
+    }
+    List<UserProperty> userProperties = findAllUserProperties(user.getUserId());
+    List<UserProperty> eraStatusProps = userProperties.stream().filter(
+            userProperty -> userProperty.getPropertyKey().equalsIgnoreCase(ERA_STATUS.getValue()))
+        .toList();
+    List<UserProperty> eraExpirationProps = userProperties.stream().filter(
+            userProperty -> userProperty.getPropertyKey()
+                .equalsIgnoreCase(ERA_EXPIRATION_DATE.getValue()))
+        .toList();
+    if (eraStatusProps.size() == 1 && eraExpirationProps.size() == 1) {
+      if (!eraStatusProps.get(0).getPropertyValue().equalsIgnoreCase("true")) {
+        throw new BadRequestException("User does not have an Era Commons ID that is authorized.");
+      }
+      if (Instant.ofEpochMilli(Long.parseLong(eraExpirationProps.get(0).getPropertyValue()))
+          .isBefore(Instant.now())) {
+        throw new BadRequestException("User has an expired Era Commons ID.");
+      }
+    } else {
+      throw new BadRequestException(
+          "Invalid ERA configuration for this user.  Only one ERA Commons ID is allowed.");
+    }
+  }
+
+  /**
+   * Compliance method that implements a set of rules in order to ensure Library Card and
+   * Institution matching rules are adhered to when authorizing users of the system.
+   * @param email of the user being evaluated
+   * @return user with the Institution and Library Card rules applied or null if the requestor isn't
+   * a DUOS user.
+   */
+  public User enforceInstitutionAndLibraryCardRules(String email) {
+    User user;
+    Institution institutionFromEmail = institutionService.findInstitutionForEmail(email);
+    try {
+      user = findUserByEmail(email);
+    } catch (NotFoundException nfe) {
+      return null;
+    }
+
+    boolean modifiedUser = false;
+
+    if (institutionFromEmail != null) {
+      if (handleUserWithInstitutionInMap(user, institutionFromEmail)) {
+        modifiedUser = true;
+      }
+    } else {
+      if (handleUserWithoutInstitutionInMap(user)) {
+        modifiedUser = true;
+      }
+    }
+
+    if (modifiedUser) {
+      return findUserByEmail(user.getEmail());
+    } else {
+      return user;
+    }
+  }
+
+  @VisibleForTesting
+  protected boolean handleUserWithInstitutionInMap(User user, Institution institutionFromEmail) {
+    boolean needsLCRemoved = needsLibraryCardRemovedForUser(user, institutionFromEmail);
+    boolean needsInstitutionAssigned = !institutionFromEmail.getId()
+        .equals(user.getInstitutionId());
+
+    if (needsInstitutionAssigned && needsLCRemoved) {
+      userServiceDAO.updateInstitutionAndClearLibraryCardForUser(user.getUserId(), institutionFromEmail.getId());
+    } else if (needsInstitutionAssigned) {
+      userDAO.updateInstitutionId(user.getUserId(), institutionFromEmail.getId());
+    } else if (needsLCRemoved) {
+      libraryCardDAO.deleteAllLibraryCardsByUser(user.getUserId());
+    }
+
+    return needsLCRemoved || needsInstitutionAssigned;
+  }
+
+  @VisibleForTesting
+  protected boolean needsLibraryCardRemovedForUser(User user, Institution userInstitution) {
+    boolean needsLCRemoved = false;
+    if (hasLibraryCard(user)) {
+      try {
+        User lcIssuer = findUserById(user.getLibraryCard().getCreateUserId());
+        Institution lcIssuerInstitution = institutionService.findInstitutionForEmail(lcIssuer.getEmail());
+        if (!userInstitution.equals(lcIssuerInstitution)) {
+          needsLCRemoved = true;
+        }
+      } catch (NotFoundException nfe) {
+        needsLCRemoved = true;
+      }
+    }
+    return needsLCRemoved;
+  }
+
+  @VisibleForTesting
+  protected boolean handleUserWithoutInstitutionInMap(User user) {
+    if (hasLibraryCard(user)) {
+      dropLCAndInstitutionForUser(user);
+      return true;
+    } else {
+      if (user.getInstitutionId() != null) {
+        userDAO.updateInstitutionId(user.getUserId(), null);
+        return true;
+      }
+    }
+    return false;
+  }
+
+  private void dropLCAndInstitutionForUser(User user) {
+    userServiceDAO.updateInstitutionAndClearLibraryCardForUser(user.getUserId(), null);
+  }
+
+  @VisibleForTesting
+  protected boolean hasLibraryCard(User user) {
+    return user.getLibraryCard() != null;
+  }
+
+  @VisibleForTesting
+  protected boolean hasMatchingInstitutionInDatabase(
+      Institution institutionFromEmail, Institution institutionFromDatabase) {
+    if (institutionFromEmail == null || institutionFromDatabase == null) {
+      return false;
+    }
+    return institutionFromDatabase.equals(institutionFromEmail);
+  }
+
   public static class SimplifiedUser {
 
-    public Integer userId;
-    public String displayName;
-    public String email;
-    public Integer institutionId;
+    private Integer userId;
+    private String displayName;
+    private String email;
+    private Integer institutionId;
 
     public SimplifiedUser(User user) {
       this.userId = user.getUserId();
@@ -494,6 +578,22 @@ public class UserService implements ConsentLogger {
 
     public void setInstitutionId(Integer institutionId) {
       this.institutionId = institutionId;
+    }
+
+    public String getDisplayName() {
+      return displayName;
+    }
+
+    public String getEmail() {
+      return email;
+    }
+
+    public Integer getInstitutionId() {
+      return institutionId;
+    }
+
+    public Integer getUserId() {
+      return userId;
     }
 
     @Override
